--- a/assets/css/deanidev.css
+++ b/assets/css/deanidev.css
@@ -78,6 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  font-size: 1rem !important;
 }
 
 abbr[title],
@@ -12196,7 +12197,7 @@ pre .code {
     margin-bottom: 20px;
   }
   .about-img {
-    height: 400px;
+    height: 450px;
     width: 300px !important;
   }
 }
